Properly expose <legend> elements to ATs https://bugs.webkit.org/show_bug.cgi?id=84137

Patch by Joanmarie Diggs <jdiggs@igalia.com> on 2012-09-10
Reviewed by Chris Fleizach.

Created a new WebCore Accessibility Role, LegendRole. Used it to map to
the expected platform role, ATK_ROLE_LABEL. Also established the needed
AtkRelation pair, label-for/labelled-by between the legend and fieldset.

Source/WebCore:

No new test needed - Existing legend.html test is now unskipped for Gtk.

* accessibility/AccessibilityObject.h: Added LegendRole
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::determineAccessibilityRole): Map legendTag to LegendRole
* accessibility/gtk/WebKitAccessibleWrapperAtk.cpp:
(webkitAccessibleGetName): Fieldset accessible should take its name from the associated LegendRole/label
(setAtkRelationSetFromCoreObject): Set label-for/labelled-by AtkRelation pair between fieldset and legend
(atkRole): Map LegendRole to ATK_ROLE_LABEL
* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(createAccessibilityRoleMap):  Map LegendRole to NSAccessibilityGroupRole

Source/WebKit/chromium:

* public/WebAccessibilityRole.h: added WebAccessibilityRoleLegend
* src/AssertMatchingEnums.cpp: added the assert matching rule for
WebAccessibilityRoleLegend and LegendRole

Tools:

* DumpRenderTree/chromium/TestRunner/AccessibilityUIElementChromium.cpp:
(roleToString): added "Legend" string for WebAccessibilityRoleLegend

LayoutTests:

* accessibility/legend.html: Modified the test to be more platform-agnostic.
* platform/gtk/TestExpectations: Removed legend.html from the skipped list.
* platform/gtk/accessibility/legend-expected.txt: Added.
* platform/mac/accessibility/legend-expected.txt: Updated.

git-svn-id: svn://svn.chromium.org/blink/trunk@128140 bbb929c8-8fbe-4397-9dbb-9b2b20218538