third_party/WebKit/Source/WebCore/accessibility/AccessibilityObject.h
@@ -145,6 +145,7 @@ enum AccessibilityRole {
     LandmarkMainRole,
     LandmarkNavigationRole,
     LandmarkSearchRole,
+    LegendRole,
     LinkRole,
     ListRole,
     ListBoxRole,
