third_party/WebKit/Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -3193,6 +3193,8 @@ AccessibilityRole AccessibilityRenderObject::determineAccessibilityRole()
         return ListMarkerRole;
     if (node && node->hasTagName(buttonTag))
         return buttonRoleType();
+    if (node && node->hasTagName(legendTag))
+        return LegendRole;
     if (m_renderer->isText())
         return StaticTextRole;
     if (cssBox && cssBox->isImage()) {
