third_party/WebKit/Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapper.mm
@@ -1580,7 +1580,8 @@ static const AccessibilityRoleMap& createAccessibilityRoleMap()
         { SpinButtonRole, NSAccessibilityIncrementorRole },
         { FooterRole, NSAccessibilityGroupRole },
         { ToggleButtonRole, NSAccessibilityButtonRole },
-        { CanvasRole, NSAccessibilityImageRole }
+        { CanvasRole, NSAccessibilityImageRole },
+        { LegendRole, NSAccessibilityGroupRole }
     };
     AccessibilityRoleMap& roleMap = *new AccessibilityRoleMap;
     
