third_party/WebKit/Source/WebKit/chromium/public/WebAccessibilityRole.h
@@ -90,6 +90,7 @@ enum WebAccessibilityRole {
     WebAccessibilityRoleLandmarkMain,
     WebAccessibilityRoleLandmarkNavigation,
     WebAccessibilityRoleLandmarkSearch,
+    WebAccessibilityRoleLegend,
     WebAccessibilityRoleLink,
     WebAccessibilityRoleList,
     WebAccessibilityRoleListBox,
